tests/analyze/too-few-args/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Parameter count mismatch: expected 2, but found 1.
> 1 | def add = fun a b {
      ^

